ArgoCD/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:014032199917:certificate/3fa68cc2-a3f3-45d9-bacf-01e2b5d5037b"
